projeto-k8s-deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projeto01-ingress
  namespace: projeto01
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: projeto01-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projeto01-frontend
                port:
                  number: 80
